fixed date format and collapsibility of current now entry

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1250,6 +1250,9 @@ footer{
   margin-top: 0.5rem;
   padding-left: 1.25rem;
 }
+.now-item-current .now-item-body {
+  padding-left: 0;
+}
 .now-archive-entry {
   margin: 1.25rem 0;
 }
